--- a/boys.html
+++ b/boys.html
@@ -24,8 +24,8 @@
         }
 
         #header-img {
-            width: 100%;
-            height: auto;
+            width: 30%;
+            height: 30%;
         }
 
         main {
@@ -72,6 +72,9 @@
     </style>
 </head>
 <body>
+    <header>
+        <img src="download.jpg" alt="Attire n Bash Logo" id="header-img">
+    </header>
 
    
 
@@ -80,9 +83,14 @@
         <div class="gallery">
             <img src="b1.jpeg" alt="Lehenga 1" loading="lazy">
             <img src="b2.jpeg" alt="Lehenga 2" loading="lazy">
-            <img src="b3.jpeg" alt="Lehenga 3" loading="lazy">
+            <img src="b3.jpg" alt="Lehenga 3" loading="lazy">
             <img src="b4.jpeg" alt="Lehenga 1" loading="lazy">
-            <img src="b5.jpeg" alt="Lehenga 2" loading="lazy">
+            <img src="b5.jpg" alt="Lehenga 2" loading="lazy">
+            <img src="b6.jpg" alt="Lehenga 2" loading="lazy">
+            <img src="b7.jpg" alt="Lehenga 3" loading="lazy">
+            <img src="b8.jpg" alt="Lehenga 1" loading="lazy">
+            <img src="b9.jpg" alt="Lehenga 2" loading="lazy">
+            <img src="b10.jpeg" alt="Lehenga 2" loading="lazy">
             <!-- Add more images as needed -->
         </div>
     </main>
