--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
             padding: 20px;
         }
 
-        #header-img {
-            width: 30%;
-            height: 30%;
-        }
+       #header-img {
+    width: 100%;
+    height: 400px; /* Maintain aspect ratio */
+    display: block;
+}
+
 
         main {
             text-align: center;
@@ -62,6 +64,16 @@
         .link-button:hover {
             background-color: #ff4e3a;
         }
+   footer.contact-info {
+    background-color: #fff;
+    padding: 20px;
+    text-align: center;
+    font-size: 1em;
+    color: #333;
+    border-top: 1px solid #ccc;
+    margin-top: 40px;
+}
+
     </style>
 </head>
 <body>
@@ -71,14 +83,19 @@
     </header>
 
     <main>
-        <h1>Welcome to Attire n Bash</h1>
+        <h1>Welcome to Attire-n-Bash</h1>
         <p>Your one-stop Garba attire rental shop. Explore our wide collection of lehengas and outfits for your next Garba event!</p>
 
         <div class="links">
-            <a href="girls.html" class="link-button">Lehengas for Girls</a>
-            <a href="boys.html" class="link-button">Costumes for Boys</a>
+            <a href="girls.html" class="link-button">Costumes for Women</a>
+            <a href="boys.html" class="link-button">Costumes for Men</a>
         </div>
     </main>
+<footer class="contact-info">
+    <p><strong>Location:</strong> 38/182 Kiran Path, Mansarovar, Jaipur</p>
+    <p><strong>Contact:</strong> 9214661418</p>
+</footer>
+
 
 </body>
 </html>
