--- a/boys.html
+++ b/boys.html
@@ -23,10 +23,11 @@
             padding: 20px;
         }
 
-        #header-img {
-            width: 30%;
-            height: 30%;
-        }
+          #header-img {
+    width: 100%;
+    height: 400px; /* Maintain aspect ratio */
+    display: block;
+}
 
         main {
             text-align: center;
