--- a/girls.html
+++ b/girls.html
@@ -23,10 +23,11 @@
             padding: 20px;
         }
 
-        #header-img {
-            width: 30%;
-            height: 30%;
-        }
+  #header-img {
+    width: 100%;
+    height: 400px; /* Maintain aspect ratio */
+    display: block;
+}
 
         main {
             text-align: center;
@@ -46,16 +47,17 @@
         }
 
         .category-item {
-            background-color: #ff6f61;
-            color: white;
-            padding: 20px 40px;
-            border-radius: 5px;
-            font-size: 1.5em;
-            text-decoration: none;
-            transition: background-color 0.3s;
-            width: 200px;
-            text-align: center;
-        }
+    background-color: #ff6f61;
+    color: white;
+    padding: 20px 40px;
+    border-radius: 5px;
+    font-size: 0.8em;
+    text-decoration: none;
+    transition: background-color 0.3s;
+    width: 200px;
+    text-align: center;
+}
+
 
         .category-item:hover {
             background-color: #ff4e3a;
@@ -73,7 +75,7 @@
     </header>
 
     <main>
-        <h1>Lehengas for Girls - Attire n Bash</h1>
+        <h1>Costumes for Women</h1>
 
         <div class="category">
             <a href="girls_500_700.html" class="category-item">
@@ -90,4 +92,3 @@
 
 </body>
 </html>
-
