--- a/girls_500_700.html
+++ b/girls_500_700.html
@@ -23,10 +23,11 @@
             padding: 20px;
         }
 
-        #header-img {
-            width: 30%;
-            height: 30%;
-        }
+  #header-img {
+    width: 100%;
+    height: 400px; /* Maintain aspect ratio */
+    display: block;
+}
 
         main {
             text-align: center;
@@ -78,7 +79,7 @@
     </header>
 
     <main>
-        <h1>Lehengas ₹500 - ₹700</h1>
+        <h1>Costumes : ₹500 - ₹700</h1>
 
         <div class="gallery">
             <img src="d1.jpg" alt="Lehenga 1" loading="lazy">
