--- a/girls_800_1000.html
+++ b/girls_800_1000.html
@@ -23,10 +23,11 @@
             padding: 20px;
         }
 
-        #header-img {
-            width: 30%;
-            height: 30%;
-        }
+       #header-img {
+    width: 100%;
+    height: 400px; /* Maintain aspect ratio */
+    display: block;
+}
 
         main {
             text-align: center;
@@ -78,7 +79,7 @@
     </header>
 
     <main>
-        <h1>Lehengas ₹800 - ₹1000</h1>
+        <h1>Costumes : ₹800 - ₹1000</h1>
 
         <div class="gallery">
             <img src="g1.jpg" alt="Lehenga 1" loading="lazy">
