--- a/girls.html
+++ b/girls.html
@@ -85,7 +85,7 @@
                 <h2>₹800 - ₹1000</h2>
             </a>
             <a href="girls_1000_above.html" class="category-item">
-                <h2>₹1000 and above</h2>
+                <h2>₹1100 - above</h2>
             </a>
         </div>
     </main>
