--- a/girls_1000_above.html
+++ b/girls_1000_above.html
@@ -82,7 +82,7 @@
         <h1>Costumes : ₹1100 - above </h1>
 
         <div class="gallery">
-            <img src="n1.jpg" alt="Lehenga 1" loading="lazy">
+            <img src="n1.png" alt="Lehenga 1" loading="lazy">
             <img src="n2.jpg" alt="Lehenga 2" loading="lazy">
             <img src="n3.jpg" alt="Lehenga 3" loading="lazy">
             <!-- More images for this category -->
