--- a/girls_800_1000.html
+++ b/girls_800_1000.html
@@ -84,7 +84,7 @@
         <div class="gallery">
             <img src="g1.jpg" alt="Lehenga 1" loading="lazy">
             <img src="g2.jpg" alt="Lehenga 2" loading="lazy">
-            <img src="g3.jpg" alt="Lehenga 3" loading="lazy">
+            <img src="g3.png" alt="Lehenga 3" loading="lazy">
             <img src="g4.jpg" alt="Lehenga 1" loading="lazy">
             <img src="g5.jpg" alt="Lehenga 2" loading="lazy">
             <img src="g6.jpg" alt="Lehenga 3" loading="lazy">
