--- a/boys.html
+++ b/boys.html
@@ -83,7 +83,7 @@
         <h1>Costumes for Boys</h1>
         <div class="gallery">
             <img src="b1.jpeg" alt="Lehenga 1" loading="lazy">
-            <img src="b2.jpeg" alt="Lehenga 2" loading="lazy">
+            <img src="b2.png" alt="Lehenga 2" loading="lazy">
             <img src="b3.jpg" alt="Lehenga 3" loading="lazy">
             <img src="b4.jpeg" alt="Lehenga 1" loading="lazy">
             <img src="b5.jpg" alt="Lehenga 2" loading="lazy">
