--- a/girls_1000_above.html
+++ b/girls_1000_above.html
@@ -83,7 +83,7 @@
 
         <div class="gallery">
             <img src="n1.png" alt="Lehenga 1" loading="lazy">
-            <img src="n2.jpg" alt="Lehenga 2" loading="lazy">
+            <img src="n2.png" alt="Lehenga 2" loading="lazy">
             <img src="n3.jpg" alt="Lehenga 3" loading="lazy">
             <!-- More images for this category -->
         </div>
