--- a/girls_500_700.html
+++ b/girls_500_700.html
@@ -92,6 +92,12 @@
             <img src="d8.jpg" alt="Lehenga 2" loading="lazy">
             <img src="d9.jpg" alt="Lehenga 3" loading="lazy">
             <img src="d10.jpg" alt="Lehenga 1" loading="lazy">
+            <img src="d11.jpg" alt="Lehenga 2" loading="lazy">
+            <img src="d12.jpg" alt="Lehenga 3" loading="lazy">
+            <img src="d13.jpg" alt="Lehenga 1" loading="lazy">
+            <img src="d14.jpg" alt="Lehenga 2" loading="lazy">
+            <img src="d15.jpg" alt="Lehenga 3" loading="lazy">
+            <img src="d16.jpg" alt="Lehenga 1" loading="lazy">
             <!-- More images for this category -->
         </div>
     </main>
