--- a/girls_800_1000.html
+++ b/girls_800_1000.html
@@ -92,6 +92,14 @@
             <img src="g8.jpg" alt="Lehenga 2" loading="lazy">
             <img src="g9.jpg" alt="Lehenga 3" loading="lazy">
             <img src="g10.jpg" alt="Lehenga 1" loading="lazy">
+            <img src="g11.jpg" alt="Lehenga 3" loading="lazy">
+            <img src="g12.jpg" alt="Lehenga 1" loading="lazy">
+            <img src="g13.png" alt="Lehenga 2" loading="lazy">
+            <img src="g14.jpg" alt="Lehenga 3" loading="lazy">
+            <img src="g15.jpg" alt="Lehenga 1" loading="lazy">
+            <img src="g16.jpg" alt="Lehenga 2" loading="lazy">
+            <img src="g17.jpg" alt="Lehenga 3" loading="lazy">
+            <img src="g18.jpg" alt="Lehenga 1" loading="lazy">
             <!-- More images for this category -->
         </div>
     </main>
