--- a/boys.html
+++ b/boys.html
@@ -80,7 +80,7 @@
    
 
     <main>
-        <h1>Costumes for Boys</h1>
+        <h1>Costumes for Men</h1>
         <div class="gallery">
             <img src="b1.jpeg" alt="Lehenga 1" loading="lazy">
             <img src="b2.png" alt="Lehenga 2" loading="lazy">
